tetris-service.yaml
apiVersion:  v1 
kind: Service
metadata:
  name: tetris-service
  namespace: tetris
  labels:
    app: tetris
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      
  selector:
    app: tetris
  # The selector field is used to identify the pods that the service should route traffic to.
